--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
 
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-            <img src="img/hero-img.svg" class="img-fluid mb-3 mb-lg-0" alt="">
+            <img src="img/rm.png" class="img-fluid mb-3 mb-lg-0" alt="">
           </div>
 
         </div>
